[package]
name = "mluau-quickjs-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua_scheduler = { git = "https://github.com/mluau/scheduler", version = "1.0.0" }
mluau = { git = "https://github.com/mluau/mluau", version = "0.11.2", features = ["serde"] }
concurrentlyexec = { git = "https://github.com/mluau-quickjs-proxy/concurrentlyexecute" }

tokio = { version = "1.47.1", features = ["full", "process"] }
tokio-util = "0.7"
futures-util = "0.3"
serde = "1"
serde_json = "1"
deno_core = { version = "0.355", features = [], default-features = false, optional = true }
deno_url = { version = "0.214", optional = true }
deno_webidl = { version = "0.214", optional = true }
deno_error = { version = "0.7", optional = true }
deno_console = { version = "0.214", optional = true }
deno_permissions = { version = "0.76", optional = true }
thiserror = { version = "2", optional = true }
base64-simd = { version = "0.8", optional = true }


[features]
default = ["deno"]
deno = ["dep:deno_core", "dep:deno_url", "dep:deno_webidl", "dep:deno_error", "dep:deno_console", "dep:thiserror", "dep:base64-simd", "dep:deno_permissions"]