[package]
name = "luaufusion"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua_scheduler = { git = "https://github.com/mluau/scheduler", version = "1.0.0" }
mluau = { git = "https://github.com/mluau/mluau", version = "0.11.2", features = ["serde"] }
concurrentlyexec = { git = "https://github.com/luaufusion/concurrentlyexecute" }

tokio = { version = "1.47.1", features = ["full", "process"] }
tokio-util = "0.7"
futures-util = "0.3"
serde = "1"
deno_core = { git = "https://github.com/luaufusion/deno_core", optional = true }
deno_error = { version = "0.7", optional = true }
thiserror = { version = "2", optional = true }
base64-simd = { version = "0.8", optional = true }
serde_bytes = "0.11.19"
urlpattern = { version = "0.3.0", optional = true }
mluau-require = { git = "https://github.com/mluau/mluau-require", optional = true }

[features]
default = ["deno", "parallel_luau", "deno_include_snapshot", "debug_message_print_enabled"]
deno = ["dep:deno_core", "dep:deno_error", "dep:thiserror", "dep:base64-simd", "dep:urlpattern"]
deno_include_snapshot = ["deno"]
parallel_luau = ["dep:mluau-require"]
debug_message_print_enabled = []